retrieve_ENO_DEV1/objects/System_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>System Logs</relationshipLabel>
        <relationshipName>System_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_ID__c</fullName>
        <externalId>true</externalId>
        <label>Business ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Object__c</fullName>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>INTERFACE</fullName>
                </value>
                <value>
                    <fullName>PROCESS_BUILDER</fullName>
                </value>
                <value>
                    <fullName>SCHEDULER</fullName>
                </value>
                <value>
                    <fullName>APEX</fullName>
                </value>
                <value>
                    <fullName>EMAIL_SERVICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correlation_ID__c</fullName>
        <label>Correlation ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business error</fullName>
                </value>
                <value>
                    <fullName>Technical error</fullName>
                </value>
                <value>
                    <fullName>Unidentified error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>TRACE</fullName>
                </value>
                <value>
                    <fullName>FATAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Legal_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link to Legal Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <label>Notification</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <externalId>true</externalId>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <label>Record Link</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Transfer_Data_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Transfer Data Record</label>
        <referenceTo>Outbound_Transfer__c</referenceTo>
        <relationshipLabel>System Logs</relationshipLabel>
        <relationshipName>System_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Modstamp__c</fullName>
        <label>System Modstamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <label>System Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>